@@ -2,6 +2,10 @@ Revision history for Perl extension Module::Build.
 
 0.40_11 - 
 
+  [BUG FIXES]
+
+  - Do not set provides in metadata if no_index is set [Leon Timmermans]
+
 0.40_10 - Tue Nov  5 12:11:37 CET 2013
 
   [BUG FIXES]
